# choppy

./: .gitignore  README.md  pyproject.toml
choppy/: blender_ops.py  bsp_node.py  bsp_tree.py  connector.py  exceptions.py  logger.py  main.py  objective_functions.py  search.py  section.py  settings.py  utils.py
test/: .gitignore  conftest.py  debug.py  test_bsp.py  test_objectives.py  test_past_failures.py
