[tool.poetry]
name = "choppy"
version = "0.1.0"
description = "Chop 3d models to fit your printer"
authors = ["Greg Starr <gregstarr2@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://choppy.tools/"
repository = "https://github.com/gregstarr/choppy"

[tool.poetry.dependencies]
python = "~3.8"
trimesh = {extras = ["all"], version = "^3.18.1"}
pyembree = "^0.2.11"
numba = "^0.56.4"

[tool.poetry.group.test.dependencies]
matplotlib = "^3.6.3"
pytest = "^7.2.1"
black = "^22.12.0"
commitizen = "^2.40.0"
pre-commit = "^3.0.2"
snakeviz = "^2.1.1"
ruff = "^0.0.238"

[tool.poetry.scripts]
choppy = "choppy.main:main"


[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.0"
tag_format = "$version"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 88
select = ["E", "W", "F", "N", "I", "B", "A", "TRY"]
fix = true
fixable = ["E", "W", "F", "N", "I", "B", "A", "TRY"]
target-version = "py38"
